# RagPipeline

./: .gitignore  README.md  learn.py  pipeline.py  pyproject.toml
docs/: README_multithreading.md
docs/chunking_pipeline/: README_chunking.md  README_embed.md  README_multithreading.md  milvus_cli_quickref.md
docs/orchestration_pipeline/: README_orchestration.md
lib/: README_chunking.md  __init__.py  chunk.py  dispatch.py  extract.py  merge.py  work.py
lib/chunking_pipeline/: __init__.py  chunk.py  dispatch.py  embed.py  extract.py  main.py  merge.py  serializer.py  store.py  test.py  work.py
lib/config/: __init__.py  main.py
lib/models/: __init__.py  main.py
lib/utils/: __init__.py  llm_client.py  logger.py  table.py  timer.py
output_images/: document_001_children.json
utils/: __init__.py  chunk.py  extract.py  llm_client.py
