[project]
name = "chunks"
version = "0.1.0"
description = "Docling RAG chunking pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.0",
    "docling>=2.80.0",
    "torch>=2.4.0",
    "requests>=2.32.2",
    "pymupdf>=1.27.2",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
